Added STRING Network

--- a/python/src/features/GenePANDA.ipynb
+++ b/python/src/features/GenePANDA.ipynb
@@ -13,7 +13,8 @@
     "import importlib\n",
     "import numpy as np\n",
     "from ast import literal_eval\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "from metrics_functions import genePANDA"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,45 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "sp = np.array(graph.shortest_paths())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def genePANDA(graph, labels, sp):\n",
-    "    proteins = graph.vs['name']\n",
-    "    average_distance = np.sum(sp, axis=1)/len(graph.vs['name'])\n",
-    "    average_distance_sqrt = np.sqrt(np.dot(average_distance[:,None],average_distance[None,:]))\n",
-    "    raw_distance = np.divide(sp, average_distance_sqrt)\n",
-    "    labels.reset_index(drop=True, inplace=True)\n",
-    "    genePANDA_proba = {}\n",
-    "    for module_name in tqdm(labels.columns):\n",
-    "        module = labels[labels[module_name]==1].index.values\n",
-    "        module_distance = raw_distance[:,module]\n",
-    "        weights = (np.sum(raw_distance, axis=1)/len(graph.vs['name'])) - (np.sum(module_distance, axis=1)/len(module))\n",
-    "        weights_labels_df = pd.DataFrame(labels[module_name])\n",
-    "        weights_labels_df['weights'] = weights\n",
-    "        weights_labels_df.sort_values(by='weights', inplace=True, ascending=False)\n",
-    "        weights_labels_df.reset_index(inplace=True)\n",
-    "        weights_labels_df.columns = ['true_index', 'label', 'weight']\n",
-    "        weights_labels_df.reset_index(inplace=True)\n",
-    "        weights_labels_df.set_index('true_index', inplace=True)\n",
-    "        weights_labels_df['P'] = weights_labels_df.apply(lambda row: row['index']+1, axis=1)\n",
-    "        weights_labels_df['TP'] = np.cumsum(weights_labels_df['label'])\n",
-    "        weights_labels_df['probability'] = weights_labels_df['TP']/weights_labels_df['P']\n",
-    "        weights_labels_df.sort_index(inplace=True)\n",
-    "        genePANDA_proba[module_name] = weights_labels_df['probability'].values\n",
-    "    genePANDA_df = pd.DataFrame.from_dict(genePANDA_proba, orient='columns')    \n",
-    "    genePANDA_df.index = graph.vs['name']\n",
-    "    return genePANDA_df"
    ]
   },
   {
@@ -172,6 +139,154 @@
     "disease_conservative_genePANDA = genePANDA(graph, disgenet_labels_conservative_df, sp)\n",
     "disease_conservative_genePANDA.to_csv('../../data/processed/metrics/disease_genepanda_conservative.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# False Positives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp = pd.read_csv('../../data/processed/reactome_protein_indexes_fp.csv')\n",
+    "disgenet_proteins_indexes_conservative_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_conservative_fp.csv')\n",
+    "disgenet_proteins_indexes_sca_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp['fp_proteins'] = reactome_proteins_indexes_fp['fp_proteins'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_conservative_fp['fp_proteins'] = disgenet_proteins_indexes_conservative_fp['fp_proteins'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_sca_fp['fp_proteins'] = disgenet_proteins_indexes_sca_fp['fp_proteins'].apply(literal_eval)\n",
+    "\n",
+    "reactome_proteins_indexes_fp['fp_proteins_index'] = reactome_proteins_indexes_fp['fp_proteins_index'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_conservative_fp['fp_proteins_index'] = disgenet_proteins_indexes_conservative_fp['fp_proteins_index'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_sca_fp['fp_proteins_index'] = disgenet_proteins_indexes_sca_fp['fp_proteins_index'].apply(literal_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "reactome_proteins_indexes_fp = reactome_proteins_indexes_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "reactome_proteins_indexes_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "reactome_proteins_indexes_fp['n_proteins'] = reactome_proteins_indexes_fp['proteins_ids'].apply(lambda row: len(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disgenet_proteins_indexes_conservative_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "disgenet_proteins_indexes_conservative_fp = disgenet_proteins_indexes_conservative_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "disgenet_proteins_indexes_conservative_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "disgenet_proteins_indexes_conservative_fp['n_proteins'] = disgenet_proteins_indexes_conservative_fp['proteins_ids'].apply(lambda row: len(row))\n",
+    "\n",
+    "disgenet_proteins_indexes_sca_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "disgenet_proteins_indexes_sca_fp = disgenet_proteins_indexes_sca_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "disgenet_proteins_indexes_sca_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "disgenet_proteins_indexes_sca_fp['n_proteins'] = disgenet_proteins_indexes_sca_fp['proteins_ids'].apply(lambda row: len(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_labels_fp_df = pd.read_csv(\"../../data/processed/reactome_labels_fp.csv\", sep=',', names=reactome_proteins_indexes_fp['process'].values)\n",
+    "disgenet_labels_fp_df = pd.read_csv(\"../../data/processed/disgenet_labels_fp.csv\", sep=',', names=disgenet_proteins_indexes_sca_fp['process'].values)\n",
+    "disgenet_conservative_labels_fp_df = pd.read_csv(\"../../data/processed/disgenet_conservative_labels_fp.csv\", sep=',', names=disgenet_proteins_indexes_conservative_fp['process'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e2da9e909904fb5af81fa9bec332369",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "process_genePANDA_fp = genePANDA(graph, reactome_labels_fp_df, sp)\n",
+    "process_genePANDA_fp.to_csv('../../data/processed/metrics/process_genepanda_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d74a21156d14416b152ff8add88e80d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/203 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "disease_genePANDA_fp = genePANDA(graph, disgenet_labels_fp_df, sp)\n",
+    "disease_genePANDA_fp.to_csv('../../data/processed/metrics/disease_genepanda_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "281be074a0b44c6997a686afd2e8d632",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/301 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "disease_conservative_genePANDA_fp = genePANDA(graph, disgenet_conservative_labels_fp_df, sp)\n",
+    "disease_conservative_genePANDA_fp.to_csv('../../data/processed/metrics/disease_genepanda_conservative_fp.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -190,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
