--- a/python/src/features/MaxLink.ipynb
+++ b/python/src/features/MaxLink.ipynb
@@ -14,12 +14,13 @@
     "import numpy as np\n",
     "from ast import literal_eval\n",
     "from tqdm.notebook import tqdm\n",
-    "from scipy.stats import hypergeom"
+    "from scipy.stats import hypergeom\n",
+    "from metrics_functions import MaxLink"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,32 +64,6 @@
     "disgenet_labels_conservative_df = pd.read_csv('../../data/processed/disgenet_conservative_labels_apid_huri.csv', names=disgenet_proteins_indexes_df['process'].values)\n",
     "disgenet_labels_conservative_df['protein_id'] = graph.vs['name']\n",
     "disgenet_labels_conservative_df.set_index('protein_id', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def MaxLink(labels, adj):\n",
-    "    proteins = labels.index\n",
-    "    labels.reset_index(inplace=True, drop=True)\n",
-    "    maxlink = {}\n",
-    "    for module_name in tqdm(labels.columns):\n",
-    "        maxlink[module_name] = []\n",
-    "        module = labels[labels[module_name]==1].index.values\n",
-    "        protein_degree_module = np.sum(adj[:,module], axis=1)\n",
-    "        protein_degree = np.sum(adj, axis=1)\n",
-    "        for i in range(len(protein_degree)):\n",
-    "            connectivity = hypergeom.pmf(protein_degree_module[i], adj.shape[0], len(module), protein_degree[i])\n",
-    "            if connectivity >= 0.5:\n",
-    "                maxlink[module_name].append(0)\n",
-    "            else:\n",
-    "                maxlink[module_name].append(protein_degree_module[i])\n",
-    "    maxlink_df = pd.DataFrame.from_dict(maxlink)\n",
-    "    return maxlink_df\n",
-    "\n"
    ]
   },
   {
@@ -168,6 +143,157 @@
     "disease_conservative_maxlink.index = graph.vs['name']\n",
     "disease_conservative_maxlink.to_csv('../../data/processed/metrics/disease_conservative_maxlink.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# False Positives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp = pd.read_csv('../../data/processed/reactome_protein_indexes_fp.csv')\n",
+    "disgenet_proteins_indexes_conservative_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_conservative_fp.csv')\n",
+    "disgenet_proteins_indexes_sca_fp = pd.read_csv('../../data/processed/disgenet_protein_indexes_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp['fp_proteins'] = reactome_proteins_indexes_fp['fp_proteins'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_conservative_fp['fp_proteins'] = disgenet_proteins_indexes_conservative_fp['fp_proteins'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_sca_fp['fp_proteins'] = disgenet_proteins_indexes_sca_fp['fp_proteins'].apply(literal_eval)\n",
+    "\n",
+    "reactome_proteins_indexes_fp['fp_proteins_index'] = reactome_proteins_indexes_fp['fp_proteins_index'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_conservative_fp['fp_proteins_index'] = disgenet_proteins_indexes_conservative_fp['fp_proteins_index'].apply(literal_eval)\n",
+    "disgenet_proteins_indexes_sca_fp['fp_proteins_index'] = disgenet_proteins_indexes_sca_fp['fp_proteins_index'].apply(literal_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_proteins_indexes_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "reactome_proteins_indexes_fp = reactome_proteins_indexes_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "reactome_proteins_indexes_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "reactome_proteins_indexes_fp['n_proteins'] = reactome_proteins_indexes_fp['proteins_ids'].apply(lambda row: len(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disgenet_proteins_indexes_conservative_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "disgenet_proteins_indexes_conservative_fp = disgenet_proteins_indexes_conservative_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "disgenet_proteins_indexes_conservative_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "disgenet_proteins_indexes_conservative_fp['n_proteins'] = disgenet_proteins_indexes_conservative_fp['proteins_ids'].apply(lambda row: len(row))\n",
+    "\n",
+    "disgenet_proteins_indexes_sca_fp.drop(columns=['proteins_ids', 'protein_index'], inplace=True)\n",
+    "disgenet_proteins_indexes_sca_fp = disgenet_proteins_indexes_sca_fp[['process', 'fp_proteins', 'fp_proteins_index']]\n",
+    "disgenet_proteins_indexes_sca_fp.columns = ['process', 'proteins_ids', 'protein_index']\n",
+    "disgenet_proteins_indexes_sca_fp['n_proteins'] = disgenet_proteins_indexes_sca_fp['proteins_ids'].apply(lambda row: len(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactome_labels_fp_df = pd.read_csv(\"../../data/processed/reactome_labels_fp.csv\", sep=',', names=reactome_proteins_indexes_fp['process'].values)\n",
+    "disgenet_labels_fp_df = pd.read_csv(\"../../data/processed/disgenet_labels_fp.csv\", sep=',', names=disgenet_proteins_indexes_sca_fp['process'].values)\n",
+    "disgenet_conservative_labels_fp_df = pd.read_csv(\"../../data/processed/disgenet_conservative_labels_fp.csv\", sep=',', names=disgenet_proteins_indexes_conservative_fp['process'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b96d2941769843c4b9182544f2e12fac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/429 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "process_maxlink_fp = MaxLink(reactome_labels_fp_df, adj_matrix_apid_huri)\n",
+    "process_maxlink_fp.index = graph.vs['name']\n",
+    "process_maxlink_fp.to_csv('../../data/processed/metrics/process_maxlink_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fed28400975642e3a7d77feb0b6186a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/203 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "disease_maxlink_fp = MaxLink(disgenet_labels_fp_df, adj_matrix_apid_huri)\n",
+    "disease_maxlink_fp.index = graph.vs['name']\n",
+    "disease_maxlink_fp.to_csv('../../data/processed/metrics/disease_maxlink_fp.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7ee88a814e44f7c92c7b11cf0618e02",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/301 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "disease_conservative_maxlink_fp = MaxLink(disgenet_conservative_labels_fp_df, adj_matrix_apid_huri)\n",
+    "disease_conservative_maxlink_fp.index = graph.vs['name']\n",
+    "disease_conservative_maxlink_fp.to_csv('../../data/processed/metrics/disease_conservative_maxlink_fp.csv')"
+   ]
   }
  ],
  "metadata": {
@@ -186,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
