--- a/python/src/features/metrics_false_positives.ipynb
+++ b/python/src/features/metrics_false_positives.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6330ef0d",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "50f5bb39",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7646ef66",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "id": "1fdca2c1",
    "metadata": {},
    "outputs": [],
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 9,
    "id": "37675a2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_rwr_whole = pd.read_csv(\"../../models/apid_huri_multiple_fs/process/probability/rwr_whole.csv\")\n",
+    "process_rwr_whole = pd.read_csv(\"../../models/GAP-MINE/process/probability/rwr_whole.csv\")\n",
     "process_rwr_whole['new_proteins'] = process_rwr_whole['new_proteins'].apply(literal_eval)\n",
-    "disease_rwr_whole = pd.read_csv(\"../../models/apid_huri_multiple_fs/disease/probability/rwr_whole.csv\")\n",
+    "disease_rwr_whole = pd.read_csv(\"../../models/GAP-MINE/disease/probability/rwr_whole.csv\")\n",
     "disease_rwr_whole['new_proteins'] = disease_rwr_whole['new_proteins'].apply(literal_eval)\n",
-    "disease_conservative_rwr_whole = pd.read_csv(\"../../models/apid_huri_multiple_fs/disease/probability/rwr_conservative_whole.csv\")\n",
+    "disease_conservative_rwr_whole = pd.read_csv(\"../../models/GAP-MINE/disease/probability/rwr_conservative_whole.csv\")\n",
     "disease_conservative_rwr_whole['new_proteins'] = disease_conservative_rwr_whole['new_proteins'].apply(literal_eval)"
    ]
   },
@@ -4805,7 +4805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   }
  },
  "nbformat": 4,
