New STRING Network & Metrics. Added: - metric_false_positives_string.ipynb - "STRING False Positive Classifiers".ipynb - Whole Data Classifiers STRING.ipynb Updated: - oplsda_string.R -> added false annotation analysis - raw_string.R -> added false annotation analysis

--- a/python/src/features/metrics_false_positives.ipynb
+++ b/python/src/features/metrics_false_positives.ipynb
@@ -316,6 +316,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d347eb26",
    "metadata": {},
@@ -324,6 +325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "81bb7049",
    "metadata": {},
@@ -332,6 +334,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "628311f1",
    "metadata": {},
@@ -1040,6 +1043,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9731c0bf",
    "metadata": {},
@@ -1759,6 +1763,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d5ce814c",
    "metadata": {},
@@ -2492,6 +2497,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e1b5c274",
    "metadata": {},
@@ -3230,6 +3236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9bb7d70",
    "metadata": {},
@@ -4053,6 +4060,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "380d520c",
    "metadata": {},
@@ -4805,7 +4813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
