"STRING Classifiers.ipynb" could not be opened. Updated to "STRING_classifiers.ipynb".
Changes to be committed:
	modified:   ../data/STRING_Network.ipynb
	modified:   ../features/metrics_false_positives_string.ipynb
	deleted:    STRING Classifiers.ipynb
	new file:   STRING_classifiers.ipynb
	renamed:    STRING False Positive Classifiers.ipynb -> STRING_classifiers_fp.ipynb
	renamed:    Threshold Classifier STRING.ipynb -> STRING_threshold_classifier.ipynb
	renamed:    Whole Data Classifiers STRING.ipynb -> STRING_whole_data_classifiers.ipynb

--- a/python/src/data/STRING_Network.ipynb
+++ b/python/src/data/STRING_Network.ipynb
@@ -1755,7 +1755,11 @@
    ],
    "source": [
     "tqdm.pandas()\n",
-    "disgenet_modules['main_component'], disgenet_modules['conservative_module'], disgenet_modules['added_nodes'] = disgenet_modules.progress_apply(lambda row: sca(row['protein_index'],graph,adj_matrix), axis=1, result_type='expand').T.values"
+    "disgenet_modules['main_component'],\\\n",
+    "      disgenet_modules['conservative_module'],\\\n",
+    "          disgenet_modules['added_nodes'] = disgenet_modules.progress_apply(\n",
+    "              lambda row: sca(row['protein_index'],graph,adj_matrix), axis=1, result_type='expand'\n",
+    "              ).T.values"
    ]
   },
   {
