--- a/python/src/models/STRING_classifiers_fp.ipynb
+++ b/python/src/models/STRING_classifiers_fp.ipynb
@@ -37,7 +37,25 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "(function(on) {\nconst e=$( \"<a>Setup failed</a>\" );\nconst ns=\"js_jupyter_suppress_warnings\";\nvar cssrules=$(\"#\"+ns);\nif(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\ne.click(function() {\n    var s='Showing';  \n    cssrules.empty()\n    if(on) {\n        s='Hiding';\n        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n    }\n    e.text(s+' warnings (click to toggle)');\n    on=!on;\n}).click();\n$(element).append(e);\n})(true);\n",
+      "application/javascript": [
+       "(function(on) {\n",
+       "const e=$( \"<a>Setup failed</a>\" );\n",
+       "const ns=\"js_jupyter_suppress_warnings\";\n",
+       "var cssrules=$(\"#\"+ns);\n",
+       "if(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\n",
+       "e.click(function() {\n",
+       "    var s='Showing';  \n",
+       "    cssrules.empty()\n",
+       "    if(on) {\n",
+       "        s='Hiding';\n",
+       "        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n",
+       "    }\n",
+       "    e.text(s+' warnings (click to toggle)');\n",
+       "    on=!on;\n",
+       "}).click();\n",
+       "$(element).append(e);\n",
+       "})(true);\n"
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -444,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
