Modified APID&HuRI pipeline -> Ready to run logistic regression. Added new logistic_classifier function -> New method without HalvingGridSearch.

--- a/python/src/models/STRING_classifiers_fp.ipynb
+++ b/python/src/models/STRING_classifiers_fp.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e16730ee",
    "metadata": {},
@@ -30,62 +31,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "aedc38bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "(function(on) {\n",
-       "const e=$( \"<a>Setup failed</a>\" );\n",
-       "const ns=\"js_jupyter_suppress_warnings\";\n",
-       "var cssrules=$(\"#\"+ns);\n",
-       "if(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\n",
-       "e.click(function() {\n",
-       "    var s='Showing';  \n",
-       "    cssrules.empty()\n",
-       "    if(on) {\n",
-       "        s='Hiding';\n",
-       "        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n",
-       "    }\n",
-       "    e.text(s+' warnings (click to toggle)');\n",
-       "    on=!on;\n",
-       "}).click();\n",
-       "$(element).append(e);\n",
-       "})(true);\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "(function(on) {\n",
-    "const e=$( \"<a>Setup failed</a>\" );\n",
-    "const ns=\"js_jupyter_suppress_warnings\";\n",
-    "var cssrules=$(\"#\"+ns);\n",
-    "if(!cssrules.length) cssrules = $(\"<style id='\"+ns+\"' type='text/css'>div.output_stderr { } </style>\").appendTo(\"head\");\n",
-    "e.click(function() {\n",
-    "    var s='Showing';  \n",
-    "    cssrules.empty()\n",
-    "    if(on) {\n",
-    "        s='Hiding';\n",
-    "        cssrules.append(\"div.output_stderr, div[data-mime-type*='.stderr'] { display:none; }\");\n",
-    "    }\n",
-    "    e.text(s+' warnings (click to toggle)');\n",
-    "    on=!on;\n",
-    "}).click();\n",
-    "$(element).append(e);\n",
-    "})(true);"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "88438d25",
    "metadata": {},
@@ -213,6 +159,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a95499cb",
    "metadata": {},
@@ -221,6 +168,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "791e955f",
    "metadata": {},
@@ -229,6 +177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44d75262",
    "metadata": {},
@@ -306,6 +255,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5917b165",
    "metadata": {},
@@ -383,6 +333,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c757812",
    "metadata": {},
