GAP-MINE alpha 2 OPLS_DA feature selection

--- a/python/src/classification.ipynb
+++ b/python/src/classification.ipynb
@@ -20,6 +20,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef9f180e",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3997e8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_dir(dir):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    if os.path.exists(dir) and os.path.isdir(dir):\n",
+    "        pass\n",
+    "    else:\n",
+    "        os.makedirs(dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4837e8f7",
+   "metadata": {},
+   "source": [
+    "# Directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "39bf8c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_dir = '../data/processed/'\n",
+    "modules_dir = parent_dir + 'modules/'\n",
+    "network_dir = parent_dir + 'networks/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7f9ddd4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "networks = ['apid_huri', 'string']\n",
+    "datasets = ['reactome', 'disgenet_sca', 'disgenet_conservative']\n",
+    "false_annotations = [False, True]\n",
+    "directories = {net: {} for net in networks}\n",
+    "\n",
+    "for net in networks:\n",
+    "    for dir_ in ['graph', 'metrics', 'labels', 'models']:\n",
+    "        new_dir = network_dir + net + '/' + dir_ +'/'\n",
+    "        check_dir(new_dir)\n",
+    "        directories[net][dir_] = new_dir"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "2b2b2914",
@@ -1914,65 +1977,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9f180e",
-   "metadata": {},
-   "source": [
-    "# Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3997e8b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_dir(dir):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    if os.path.exists(dir) and os.path.isdir(dir):\n",
-    "        pass\n",
-    "    else:\n",
-    "        os.makedirs(dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "39bf8c8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_dir = '../data/processed/'\n",
-    "modules_dir = parent_dir + 'modules/'\n",
-    "network_dir = parent_dir + 'networks/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7f9ddd4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "networks = ['apid_huri', 'string']\n",
-    "datasets = ['reactome', 'disgenet_sca', 'disgenet_conservative']\n",
-    "false_annotations = [False, True]\n",
-    "directories = {net: {} for net in networks}\n",
-    "\n",
-    "for net in networks:\n",
-    "    for dir_ in ['graph', 'metrics', 'labels', 'models']:\n",
-    "        new_dir = network_dir + net + '/' + dir_ +'/'\n",
-    "        check_dir(new_dir)\n",
-    "        directories[net][dir_] = new_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a5f52879",
    "metadata": {},
    "source": [
-    "# GAP-MINE1"
+    "# GAP-MINE"
    ]
   },
   {
@@ -2010,7 +2018,7 @@
     "    ###################### Compute GAP-MINE ######################################################\n",
     "    results = Parallel(n_jobs=-1)(\n",
     "        delayed(classifiers.gapmine)(\n",
-    "            X, y[:, module], beta=0.5, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
+    "            X, y, module, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
     "            ) for module in tqdm(range(len(module_labels)))\n",
     "        )\n",
     "    \n",
@@ -2025,67 +2033,6 @@
     "    check_dir(gapmine_dir)\n",
     "    clf_results.to_csv(gapmine_dir + f'{dataset_label}{fa_label}results.csv', index=False)\n",
     "    cv_results.to_csv(gapmine_dir + f'{dataset_label}{fa_label}cv.csv', index=False)\n",
-    "\n",
-    "    with open(gapmine_dir + f\"{dataset_label}{fa_label}models.pckl\", \"wb\") as f:\n",
-    "        for model in clf_models:\n",
-    "            pickle.dump(model, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa7b7778",
-   "metadata": {},
-   "source": [
-    "# GAP-MINE2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a16f0b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(classifiers)\n",
-    "for dataset_label, network_label, fa in itertools.product(datasets, networks, false_annotations):\n",
-    "    print(dataset_label, network_label, fa)\n",
-    "    ############### load data #############################\n",
-    "    if fa:\n",
-    "        fa_label = '_fa_'\n",
-    "        graph = Graph.Read_GML(directories[network_label]['graph'] + \"graph.gml\")\n",
-    "        shortest_paths = np.array(graph.distances())\n",
-    "\n",
-    "    else:\n",
-    "        fa_label = '_'\n",
-    "        graph = None\n",
-    "        shortest_paths = None\n",
-    "        \n",
-    "    metrics = pd.read_csv(directories[network_label]['metrics'] + f\"{dataset_label}_rwr.csv\", header=0, index_col=0)\n",
-    "\n",
-    "    labels = pd.read_csv(directories[network_label]['labels'] + f\"{dataset_label}.csv\", header=0, index_col=0)   \n",
-    "    \n",
-    "    ####################### Prepare data #######################################################\n",
-    "\n",
-    "    module_labels = metrics.columns.to_list()\n",
-    "\n",
-    "    X = metrics.to_numpy()\n",
-    "    y = labels.to_numpy(dtype='int')\n",
-    "    \n",
-    "    ###################### Compute GAP-MINE ######################################################\n",
-    "    results = Parallel(n_jobs=-1)(\n",
-    "        delayed(classifiers.gapmine2)(\n",
-    "            X, y[:, module], beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
-    "            ) for module in tqdm(range(len(module_labels)))\n",
-    "        )\n",
-    "    \n",
-    "    clf_results = pd.DataFrame([i[0] for i in results])\n",
-    "    clf_results['target_module'] = module_labels\n",
-    "    clf_models = [i[1] for i in results]\n",
-    "\n",
-    "    ###################### Save Results ###########################################################\n",
-    "    gapmine_dir = directories[network_label]['models'] + 'gapmine/'\n",
-    "    check_dir(gapmine_dir)\n",
-    "    clf_results.to_csv(gapmine_dir + f'{dataset_label}{fa_label}results.csv', index=False)\n",
     "\n",
     "    with open(gapmine_dir + f\"{dataset_label}{fa_label}models.pckl\", \"wb\") as f:\n",
     "        for model in clf_models:\n",
@@ -2284,12 +2231,6 @@
     "    ###################### Save Results ###########################################################\n",
     "    clf_results.to_csv(directory['clf_results']+f'{dataset_label}{fa_label}{network_label}.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84ebf99a",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
