GAP-MINE alfa 2

--- a/python/src/classification.ipynb
+++ b/python/src/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,16 @@
   {
    "cell_type": "markdown",
    "id": "ef9f180e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3997e8b6",
    "metadata": {},
    "outputs": [],
@@ -46,14 +48,16 @@
   {
    "cell_type": "markdown",
    "id": "4837e8f7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "39bf8c8b",
    "metadata": {},
    "outputs": [],
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7f9ddd4b",
    "metadata": {},
    "outputs": [],
@@ -86,7 +90,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "2b2b2914",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# TEST CLIQUES"
    ]
@@ -1985,6 +1991,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "fe0d3bdb-fd12-473c-930b-db048a77c0f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(classifiers)\n",
+    "network_label='apid_huri'\n",
+    "dataset_label='reactome'\n",
+    "metrics = pd.read_csv(directories[network_label]['metrics'] + f\"{dataset_label}_rwr.csv\", header=0, index_col=0)\n",
+    "labels = pd.read_csv(directories[network_label]['labels'] + f\"{dataset_label}.csv\", header=0, index_col=0)\n",
+    "X = metrics.to_numpy()\n",
+    "y = labels.to_numpy(dtype='int')\n",
+    "module_labels = metrics.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b989f456-d3dc-4ca0-a9be-30d012a8645c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vip_scores = []\n",
+    "for module in tqdm(range(len(module_labels))):\n",
+    "    _, vips, _ = classifiers.feature_selection(X, y[:,module], module)\n",
+    "    vip_scores.append(vips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bffb87f5-cb47-4ea4-9a3f-c46bc3e94ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = Parallel(n_jobs=8)(\n",
+    "        delayed(classifiers.feature_selection)(X, y[:,module], module) for module in tqdm(range(len(module_labels)))\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "faa2209a",
    "metadata": {},
@@ -2016,9 +2064,9 @@
     "    y = labels.to_numpy(dtype='int')\n",
     "    \n",
     "    ###################### Compute GAP-MINE ######################################################\n",
-    "    results = Parallel(n_jobs=-1)(\n",
+    "    results = Parallel(n_jobs=18)(\n",
     "        delayed(classifiers.gapmine)(\n",
-    "            X, y, module, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
+    "            X, y, module, train_size=0.8, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
     "            ) for module in tqdm(range(len(module_labels)))\n",
     "        )\n",
     "    \n",
@@ -2043,7 +2091,9 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "dce0c4b3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Baseline Model"
    ]
